# SPDX-License-Identifier: Apache-2.0 OR MIT
#
# SPDX-FileCopyrightText: Copyright 2021 Micron Technology, Inc.

option('docs', type: 'boolean', value: true,
    description: 'Build the documentation')
option('tests', type: 'boolean', value: true,
    description: 'Build tests')
option('experimental', type: 'boolean', value: true, yield: true,
    description: 'Enable support for the experimental API')
option('repo', type: 'string', value: '',
    description: 'Repository to deploy the JAR to on install')
